--- a/public/blog/2023-06-29.md
+++ b/public/blog/2023-06-29.md
@@ -6,6 +6,10 @@ date: 2023-06-29T16:50:50.328Z
 tags:
   - post
 ---
-* s﻿df
-* a﻿sdf
-* a﻿sdf
+*h﻿ello,* **how are you doin?**
+
+## `a﻿sdf`
+
+```apex
+#include farts
+```
