--- a/src/blog/2023-07-06.md
+++ b/src/blog/2023-07-06.md
@@ -7,3 +7,10 @@ tags:
   - post
 ---
 important things should be prioritizes over bs that no one should care about.
+
+```cpp
+#include cpp
+main() {}
+if x:
+  fartedFace = 3 + 9
+```
