--- a/src/blog/2023-07-06.md
+++ b/src/blog/2023-07-06.md
@@ -8,9 +8,11 @@ tags:
 ---
 important things should be prioritizes over bs that no one should care about.
 
-```cpp
-#include cpp
-main() {}
-if x:
-  fartedFace = 3 + 9
-```
+i﻿mportant
+
+1. s﻿tuff
+2. m﻿ore stuff
+3. s﻿ome more bs
+
+   * t﻿his is awesome
+   * t﻿his is important too
