--- a/src/blog/2023-07-06.md
+++ b/src/blog/2023-07-06.md
@@ -15,4 +15,4 @@ i﻿mportant
 3. s﻿ome more bs
 
    * t﻿his is awesome
-   * t﻿his is important too
+   * Just found this today, sorry for digging..... Im looking for something to control rgb and read all that sensor stuff like cpu temp and so on...
